<resources>
    <string name="app_name">Employee</string>
    <string name="activity_name">Add Employee</string>
    <string name="label_name">Name: </string>
    <string name="label_age">Age:</string>
    <string name="label_birthday">Birthday:</string>
    <string name="label_button_add">ADD</string>
    <string name="activity_display_employee_name">List Employee</string>
    <string name="label_button_back">Back</string>
    <string name="label_button_detail">Detail</string>
    <string name="label_address">Address:</string>
    <string name="label_job">Job:</string>
    <string name="editTextJob_hint">Enter your job</string>
    <string name="ediitTextName_hint">Enter your name</string>
    <string name="editTextAge_hint">Enter your age</string>
    <string name="editTextBirthday_hint">Click choice your birthday</string>
    <string name="editTextAddress_hint">Enter your address</string>
</resources>
